# Xonix

./: .gitmodules  CMakeLists.txt
docs/: CMakeLists.txt  Diagrams.mdj
include/: Log.h  Logger.h
src/: Button.h  CMakeLists.txt  Classes.h  Game.cpp  Game.h  GameEvent.h  GameSettings.cpp  GameSettings.h  Log.cpp  Logger.cpp  TextPainter.h  Window.cpp  Window.h  main.cpp
src/Engines/: AnimationEngine.cpp  AnimationEngine.h  DrawEngine.cpp  DrawEngine.h  Engine.cpp  Engine.h  EventEngine.cpp  EventEngine.h  MoveEngine.cpp  MoveEngine.h  ObjectFactory.cpp  ObjectFactory.h
src/EventHandlers/: EventHandler.h  ExitGame.cpp  ExitGame.h  PlayerController.cpp  PlayerController.h
src/GameObjects/: Animation.h  Block.h  Entity.h  GameObject.cpp  GameObject.h  Map.h  PhysObjects.h  Player.h
src/GameStates/: GameOverState.h  InPlayState.h  MenuState.h
src/Handlers/: CloseHandler.h  CollisionHandler.h  EnemyCollision.h  EventHandler.h  PlayerController.h
src/Interface/: GameState.cpp  GameState.h
src/Logging/: Log.cpp  Log.h  Logger.cpp  Logger.h
